# engine

./: CMakeLists.txt
base_resources/: CMakeLists.txt
base_resources/include/resources/: Texture.h
base_resources/src/: Texture.cpp
engine_core/: CMakeLists.txt
engine_core/include/core/: System.h
engine_core/src/: Entity.cpp
include/: ComponentTypes.h  InputSystem.h  Window.h  std.h
include/components/: Camera.h  MeshRenderer.h  Transform.h
include/core/: Component.h  Entity.h  Query.h  System.h  Universe.h  World.h
include/physics/: BoxCollider.h  CollisionObject.h  ConvexHull.h  KinematicBody.h  PhysicsSystem.h  RigidBody.h  SphereCollider.h  StaticBody.h  Trigger.h
include/renderer/: Material.h  MaterialProgram.h  RenderSystem.h  RenderableMesh.h  RenderableTexture.h
include/renderer/resources/: Mesh.h
include/resources/: FileResource.h  FileResourceBuilder.h  Mesh.h  RenderResources.h  ResourceLoader.h  Shader.h  Texture.h
include/utility/: Event.h  Package.h  Serializer.h
main/: CMakeLists.txt
main/src/: Window.cpp
physics/: CMakeLists.txt
physics/include/physics/: BulletUtil.h
physics/src/: Collider.cpp
renderer/: CMakeLists.txt
renderer/include/renderer/: MaterialProgram.h  RenderSystem.h
renderer/src/: MaterialProgram.cpp  RenderSystem.cpp
res/: basic_shader.f  basic_shader.v  ui_box.f  ui_box.v  ui_common.s  ui_generic.f  ui_generic.v  ui_image.f  ui_text.f  ui_text.v
resource_system/: CMakeLists.txt
resource_system/include/resources/: FileResource.h
src/: CMakeLists.txt  InputSystem.cpp  Window.cpp  main.cpp
src/base_resources/: CMakeLists.txt
src/base_resources/include/resources/: Colour.h  Mesh.h  Shader.h  Texture.h
src/base_resources/src/: Colour.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/components/: Camera.cpp  MeshRenderer.cpp  Transform.cpp
src/core/: Entity.cpp  Query.cpp  Universe.cpp  World.cpp
src/engine_core/: CMakeLists.txt
src/engine_core/include/: std.h
src/engine_core/include/components/: Transform.h
src/engine_core/include/core/: Component.h  Entity.h  Query.h  System.h  Universe.h  World.h
src/engine_core/src/: Entity.cpp  Query.cpp  Transform.cpp  Universe.cpp  World.cpp
src/font_resource/: CMakeLists.txt
src/font_resource/include/font/: Font.h  FontFace.h
src/font_resource/src/: Font.cpp  FontFace.cpp
src/main/: CMakeLists.txt
src/main/include/: InputSystem.h  Window.h  debug.h
src/main/src/: InputSystem.cpp  Window.cpp  debug.cpp  main.cpp
src/physics/: BoxCollider.cpp  CMakeLists.txt  CollisionObject.cpp  ConvexCollider.cpp  PhysicsSystem.cpp  PhysicsSystemQueries.cpp  RigidBody.cpp  SphereCollider.cpp  StaticBody.cpp  Trigger.cpp
src/physics/include/physics/: BoxCollider.h  BulletUtil.h  Collider.h  CollisionObject.h  ConvexCollider.h  ConvexHull.h  PhysicsSystem.h  RigidBody.h  SphereCollider.h  Trigger.h
src/physics/src/: BoxCollider.cpp  CollisionObject.cpp  ConvexCollider.cpp  ConvexHull.cpp  KinematicBody.cpp  PhysicsSystem.cpp  PhysicsSystemQueries.cpp  RigidBody.cpp  Trigger.cpp
src/render_resources/: CMakeLists.txt
src/render_resources/include/renderer/: Material.h  RenderableMesh.h  RenderableTexture.h
src/render_resources/src/: Material.cpp  RenderableTexture.cpp
src/renderer/: CMakeLists.txt  Material.cpp  MaterialProgram.cpp  RenderSystem.cpp  RenderableMesh.cpp  RenderableTexture.cpp
src/renderer/include/renderer/: Camera.h  Material.h  MaterialProgram.h  RenderSurface.h  RenderSystem.h  RenderableMesh.h  RenderableTexture.h
src/renderer/src/: Camera.cpp  Material.cpp  MaterialProgram.cpp  RenderSystem.cpp  RenderableMesh.cpp  RenderableTexture.cpp
src/resource_system/: CMakeLists.txt
src/resource_system/include/resources/: FileResource.h  ResourceLoader.h
src/resource_system/include/utility/: Serializer.h
src/resource_system/src/: FileResource.cpp  ResourceLoader.cpp  Serializer.cpp
src/resources/: Colour.cpp  FileResource.cpp  FileResourceBuilder.cpp  Mesh.cpp  ResourceLoader.cpp  Shader.cpp  Texture.cpp
src/ui_system/: CMakeLists.txt
src/ui_system/include/ui/: AnchorOffsetLayout.h  Box.h  Button.h  Container.h  ContainerLayouts.h  Image.h  Slider.h  Text.h  TextField.h  UIElement.h  UISystem.h  UIUtil.h  WrapperElement.h
src/ui_system/src/: AnchorOffsetLayout.cpp  Box.cpp  Button.cpp  Container.cpp  Image.cpp  ListLayout.cpp  OverlayLayout.cpp  Slider.cpp  Text.cpp  TextField.cpp  UIElement.cpp  UISystem.cpp  UIUtil.cpp  UIUtil.h  WrapperElement.cpp
src/utility/: Package.cpp  Serializer.cpp
tools/: CMakeLists.txt
tools/model_converter/: CMakeLists.txt
tools/model_converter/include/: Package.h  Serializer.h
tools/model_converter/src/: Package.cpp  Serializer.cpp  main.cpp
tools/packager/: CMakeLists.txt
tools/packager/src/: font_load.cpp  main.cpp
